# luvi

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.static  README.md  appveyor.yml  build.bat  bundle.c  common.gypi  jit  libuv.cmake  luajit.cmake  luajit.gyp  luvi.gyp  lzlib.c  main.c  main.lua  make.bat  miniz.c  msvcbuild.bat  test-zip.lua  test.lua
.github/workflows/: ci.yml
cmake/Modules/: FindLPEG.cmake  FindLibluv.cmake  FindLibuv.cmake  FindLuaJIT.cmake  FindLuv.cmake  FindPCRE.cmake  FindPCRE2.cmake  LuaAddExecutable.cmake  LuaJITAddExecutable.cmake  luac.lua
docker/: Dockerfile
docker-build/: .gitignore  Dockerfile.alpine.arm32v6  Dockerfile.alpine.arm64v8  Dockerfile.alpine.i386  Dockerfile.alpine.native  Dockerfile.arm32v7  Dockerfile.arm64v8  Dockerfile.i386  Dockerfile.native  Makefile  qemu-aarch64-static  qemu-arm-static  qemu-i386-static
docs/: README.md  gen.lua
docs/generators/: init.lua  markdown.lua
docs/modules/: miniz.lua
docs/output/markdown/: miniz.md
lib/: init.lua  utils.lua
packaging/: Dockerfile.in  docker-build.sh  hbb  holy-build.sh  linux-build.sh  linux-run.sh  test.lua
packaging/macosx/: Icons.icns  Info.plist
repl-app/: main.lua
sample-app/: greetings.txt  main.lua
samples/: Makefile
samples/custom_main/: package.lua
samples/custom_main/test/: run.lua
samples/lib/: repl.lua  utils.lua
samples/repl.app/: main.lua  repl.lua  utils.lua
samples/test.app/: main.lua  sonnet-133.txt  utils.lua
samples/winsvc.app/: main.lua
src/: env.c  glibc-compat-symbols.h  inflate.c  lbit.c  lenv.c  lminiz.c  luvi.c  luvi.h  luvi_compat.c  luvi_renamed.c  main.c  miniz.c  snapshot.c  tinfl.c  winsvc.c  winsvc.h  winsvcaux.c  winsvcaux.h
src/lua/: init.lua  luvibundle.lua  luvipath.lua  utils.lua  zip.lua  zipreader.lua
